test/expected/file-explain_x.out
cdecl> explain x
               ^
9: error: "x": unknown name
